[package]
name = "webhook-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["ws"] }
chrono = { version = "0.4.19", features = ["serde"] }
hyper = "0.14.19"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["macros", "signal"] }
uuid = { version = "1.1.0", features = ["serde", "v4"] }
