[package]
name = "webhook-tester"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["ws"] }
chrono = { version = "0.4.22", features = ["serde"] }
hyper = "0.14.20"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["macros", "signal"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
